--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,31 @@
 /* ---通用样式--- */
+
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* 使用 min-height 确保足够的高度 */
+  min-height: 100vh;
+  /* 使用 min-height 确保足够的高度 */
   margin: 0;
   background-color: #f0f0f0;
-  font-family: "Roboto", sans-serif;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  flex-direction: column;
 }
 
 .container {
   display: flex;
-  flex-direction: column; /* 纵向排列 */
-  width: 90%; /* 响应式宽度 */
-  max-width: 800px;
+  flex-direction: row;
+  /* 纵向排列 */
+  width: 90%;
+  /* 响应式宽度 */
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  padding: 20px; /* 内边距 */
-  margin: auto; /* 自动水平外边距 */
+  padding: 20px;
+  /* 内边距 */
+  margin: auto;
+  /* 自动水平外边距 */
+  float: left;
 }
 
 /* 标签部分样式 */
@@ -28,7 +33,8 @@ body {
   border-radius: 30px;
   display: flex;
   box-shadow: 0 4px 40px -8px rgba(0, 0, 0, 0.2);
-
+  float: left;
+  width: 65%;
 }
 
 .tabs-container .tabs {
@@ -51,7 +57,8 @@ body {
 }
 
 .tabs-container .tabs .tab:hover {
-  background: #55aacc; /* 悬停效果 */
+  background: #55aacc;
+  /* 悬停效果 */
 }
 
 .tabs-container .tabs .tab.active {
@@ -61,9 +68,11 @@ body {
 
 .tabs-container .content-container {
   background: #f6fdff;
-  flex-grow: 1; /* 使内容区域填满剩余空间 */
+  flex-grow: 1;
+  /* 使内容区域填满剩余空间 */
   border-radius: 0 30px 30px 0;
-  padding: 20px; /* 添加内边距 */
+  padding: 20px;
+  /* 添加内边距 */
 }
 
 .tabs-container .content-container .content {
@@ -86,6 +95,11 @@ body {
 
 
 /* ---黄历样式--- */
+.OwO {
+  padding-left: 5%;
+  width: 30%;
+}
+
 .date {
   padding-top: 15px;
   padding-bottom: 8px;
@@ -96,7 +110,8 @@ body {
 
 .good,
 .bad {
-  margin: 15px 0; /* 适当的间距 */
+  margin: 15px 0;
+  /* 适当的间距 */
   padding: 10px;
   border-radius: 10px;
 }
@@ -112,24 +127,30 @@ body {
 .title {
   font-size: 20px;
   font-weight: bold;
-  text-align: center; /* 标题居中 */
+  text-align: center;
+  /* 标题居中 */
 }
 
-.awa1, .awa2 {
+.awa1,
+.awa2 {
   list-style: none;
   padding: 0;
-  margin: 10px 0 0; /* 顶部边距 */
+  margin: 10px 0 0;
+  /* 顶部边距 */
 }
 
-.awa1 li, .awa2 li {
+.awa1 li,
+.awa2 li {
   list-style: none;
-  padding: 5px 0; /* 列表项上下间距 */
+  padding: 5px 0;
+  /* 列表项上下间距 */
 }
 
 /* ---额外样式--- */
 .line-tip {
   padding-bottom: 10px;
-  text-align: center; /* 文本居中 */
+  text-align: center;
+  /* 文本居中 */
 }
 
 /* 按钮样式 */
@@ -144,7 +165,8 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3; /* 悬停效果 */
+  background-color: #0056b3;
+  /* 悬停效果 */
 }
 
 .qwq {
